--- a/机器学习.md
+++ b/机器学习.md
@@ -21,3 +21,7 @@
 这些正则化方法的惩罚项可以与模型的损失函数相结合，形成一个新的目标函数。在训练过程中，优化算法将尝试最小化这个新的目标函数，从而找到适合的模型参数。
 
 正则化在机器学习中起到了平衡模型复杂度和拟合数据的作用。它可以帮助避免过拟合，提高模型的泛化能力，并在特征选择中起到重要的作用。
+
+
+##决策树
+
